# PvZ-Portable-LuaJIT

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: build-windows.yml  ci.yml
android/app/src/main/java/io/github/wszqkzqk/pvzportable/: PvZPortableActivity.java
mods/almanac_page_test/: main.lua  mod.lua
mods/almanac_test/: main.lua  mod.lua
mods/custom_content_test/: main.lua  mod.lua
mods/custom_plant_test/: main.lua  mod.lua
mods/custom_reanim_test/: main.lua  mod.lua
mods/custom_zombie_test/: main.lua  mod.lua
mods/example_mod/: main.lua  mod.lua
mods/ffi_test/: main.lua  mod.lua
mods/ffi_test2/: main.lua  mod.lua
mods/hud_test/: main.lua  mod.lua
mods/plant_damage_event_test/: main.lua  mod.lua
mods/plant_die_event_test/: main.lua  mod.lua
mods/projectile_damage_test/: main.lua  mod.lua
mods/quick_sunflower_test/: main.lua  mod.lua
mods/resource_test/: main.lua  mod.lua
mods/seed_chooser_test/: main.lua  mod.lua
mods/seed_packet_test/: main.lua  mod.lua
mods/seed_scroll_test/: main.lua  mod.lua
mods/wave_injection_test/: main.lua  mod.lua
mods/widget_test/: main.lua  mod.lua
mods/zombie_2x_speed/: main.lua  mod.lua
mods/zombie_3x_hp/: main.lua  mod.lua
src/: GameConstants.h  LawnApp.cpp  main.cpp
src/Lawn/: Board.cpp  Board.h  Challenge.cpp  CutScene.cpp  GameObject.cpp  GameObject.h  GridItem.cpp  LawnMower.cpp  Plant.cpp  Plant.h  Projectile.cpp  SeedPacket.cpp  ZenGarden.cpp  Zombie.cpp  Zombie.h
src/Lawn/System/: DataSync.cpp  ReanimationLawn.cpp  ReanimationLawn.h  SaveGame.cpp
src/Lawn/Widget/: AchievementsScreen.cpp  AlmanacDialog.cpp  AlmanacDialog.h  SeedChooserScreen.cpp  SeedChooserScreen.h  UserDialog.cpp
src/Mod/: ModBus.cpp  ModBus.h  ModCtx.h  ModEvent.h
src/Mod/Export/: PvzExport.cpp  PvzExport.h
src/Mod/Lua/: BindBoard.cpp  BindCoin.cpp  BindEnums.cpp  BindGraphics.cpp  BindGridItem.cpp  BindLawnMower.cpp  BindPlant.cpp  BindProjectile.cpp  BindReanimation.cpp  BindSol2.cpp  BindSol2Generated.inl  BindZombie.cpp  LuaBindUtil.h  LuaRuntime.cpp  LuaRuntime.h
src/Mod/Utils/: MiniJson.h
src/Sexy.TodLib/: Definition.cpp  Definition.h  Reanimator.cpp  Reanimator.h  TodCommon.cpp  TodStringFile.cpp
src/SexyAppFramework/: SexyAppBase.cpp
src/SexyAppFramework/graphics/: GLInterface.cpp  Graphics.cpp  ImageFont.cpp
src/SexyAppFramework/misc/: Buffer.cpp
src/SexyAppFramework/paklib/: PakInterface.cpp  PakInterface.h
src/SexyAppFramework/widget/: ScrollbarWidget.h
tools/: gen_sol2_bindings.py
